# QtGL

./: .gitignore  CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  scene3d.h
cmake/: FindASSIMP.cmake  FindGLM.cmake
resources/models/: Dog.mtl  Puppy.mtl  sponza.mtl
resources/models/crate/: crate.mtl
resources/models/medieval-scenery/: medieval.fbx  medievalApplied.fbx
resources/models/textures/: sponza_floor_a_bump.tga
resources/shaders/: colorcorrection.frag  debug.frag  debug.vert  default.frag  default2.frag  default2.vert  dirlightdepth.vert  fxaa.frag  gaussianblur.frag  gbuffer.frag  gbuffer.vert  gdirlight.frag  gfinal.frag  gpointlight.frag  gpointlight.vert  grayscale.frag  skybox.vert  ssao.frag  ssr.frag  weightedgblur.frag
shaders/: default.frag  default.vert
src/: GL.h  VertexAttrib.h  action.h  boundingbox.cpp  boundingbox.h  boundingsphere.cpp  boundingsphere.h  camera.cpp  camera.h  camerafrustum.cpp  camerafrustum.h  colorcorrection.cpp  colorcorrection.h  debugrenderer.cpp  debugrenderer.h  deferredrenderer.cpp  deferredrenderer.h  directionallight.cpp  directionallight.h  entity.cpp  entity.h  forwardrenderer.h  framebuffer.cpp  framebuffer.h  frustum.cpp  frustum.h  fxaa.cpp  fxaa.h  grayscaleeffect.cpp  grayscaleeffect.h  inputhandler.h  inputmgr.cpp  inputmgr.h  main.cpp  mainwindow.cpp  mainwindow.h  material.cpp  material.h  materialresource.h  mesh.cpp  (+35 more)
src/ecs/: hoverComp.h  meshrendererComp.h  transformComp.h  world.cpp  world.h
src/ecs/comp/: cameraComp.h  directionallightComp.h  dirtytransformComp.h  hierarchyComp.h  meshrendererComp.h  moveComp.h  playerInputComp.h  pointlightComp.h  transformComp.h
src/ecs/system/: cameraSystem.cpp  cameraSystem.h  componentSystem.h  hierarchySystem.cpp  hierarchySystem.h  lightSystem.cpp  lightSystem.h  movementSystem.cpp  movementSystem.h  playerInputSystem.cpp  playerInputSystem.h  renderSystem.cpp  renderSystem.h  transformSystem.cpp  transformSystem.h  transformUndirtySystem.cpp  transformUndirtySystem.h
src/gfx/: commandqueue.cpp  commandqueue.h  cubeobserver.h  defrenderer.cpp  defrenderer.h  forwardrenderer.cpp  forwardrenderer.h  masterrenderer.cpp  masterrenderer.h  rendercommand.h  shaderresolver.cpp  shaderresolver.h  shadowrenderer.cpp  shadowrenderer.h  skyrenderer.cpp  skyrenderer.h  ssr.cpp  ssr.h
src/lights/: pointlight.cpp  pointlight.h
src/python/: mytestmodule.cpp  pythonTest.py  setup.py
src/utils/: flags.h
